--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ platform-services[rabbitmq,mongodb,keycloak,redis]>=4.0.0,<5.0.0
 pydantic[dotenv] >=1.6.2,!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0
 starlette ==0.14.2
 uvicorn[standard] >=0.12.0,<0.14.0
+torch==1.11.0
+torchvision==0.12.0
+torchaudio==0.11.0
+transformers==4.19.2
+pymorphy2==0.9.1
