--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 .DS_Store
 .vscode/
 
+# Веса модели эмоций
+app/models/emotion-detection
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
