--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi ==0.67.0
-platform-services[postgresql]>=2.2.5
+platform-services[postgresql,rabbitmq]>=2.2.5
 pydantic[dotenv] >=1.6.2,!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0
 starlette ==0.14.2
 uvicorn[standard] >=0.12.0,<0.14.0
