actualize env-example

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,9 @@
 avatar_debug=True
 avatar_enable_specs=True
+avatar_redis_dsn=redis://localhost:6379
+avatar_mongodb_dsn=mongodb://user:password@localhost
+avatar_postgresql_dsn=postgresql+asyncpg://root:12345@localhost/avatar
 avatar_keycloak_verify_signature=false
 avatar_rabbitmq_dsn=amqp://user:password@localhost
-avatar_postgresql_dsn=postgresql+asyncpg://user:password@localhost:5432/avatar
-
-
-avatar_telegram_api_token=5651789797:AAHpeQ_o29uPj5H0XwiGtnnUTePhDsa5fAs
-avatar_title=chat_integrator
-avatar_version=0.1.0
-
-PG_USERNAME=user
-PG_PASSWORD=password
-PG_DATABASE=avatar
-PG_HOST=127.0.0.1
-PG_PORT=5432
-
-RMQ_USERNAME=user
-RMQ_PASSWORD=password
-RMQ_HOST=localhost
-RMQ_PORT=5672
-
+avatar_keycloak_server_url=http://0.0.0.0:8080/auth/
+avatar_port=9001
